--- a/chargen_b4_v2_4.html
+++ b/chargen_b4_v2_4.html
@@ -4076,7 +4076,8 @@ function generateNew() {
 	genW = window.open('#','generate','width=640,height=480,scrollbars=1');
 	genW.document.write("Planned Skill Purchases:<br><ul>");
 	for (i=0;i<levelskill.length; i++) {
-		genW.document.write("<li>" + levels[i] + "</li>");
+		if (levels[i] == '-- Saved --') { ... }
+		else { genW.document.write("<li>" + levels[i] + "</li>"); }
 	}
 	genW.document.write("</ul><br><hr><br>CP left over:    " + document.getElementById("bankedcp").innerHTML);
 }
