--- a/chargen_b4_v2_4.html
+++ b/chargen_b4_v2_4.html
@@ -258,7 +258,7 @@ document.onkeydown = getKeyPress;
 function getKeyPress(e) {
 	if (e.key == '+') levelup();
 	if (e.key == '-') delevel();
-	if (e.key == 'p') generateNew();
+	if (e.key == 'g') generateNew();
 }
 var levels = Array(); levelcp = Array(); levelskill = Array(); level = Array();
 var cplevel = Array(10,10,10,10,10,10,10,10,10,20,20,20,20,20,20,20,20,20,20,30,30,30,30,30,30,30,30,30,30,30);
