--- a/chargen_b4_v2_4.html
+++ b/chargen_b4_v2_4.html
@@ -256,9 +256,19 @@ h5
 <script>
 document.onkeydown = getKeyPress;
 function getKeyPress(e) {
-	if (e.key == '+') levelup();
-	if (e.key == '-') delevel();
-	if (e.key == 'g') generateNew();
+	if (e.key == 'alt') e.preventDefault();
+	if (e.key == 's') e.preventDefault();
+	if (e.key == '+') {
+		e.preventDefault();
+		levelup();
+	}
+	if (e.key == '-') {
+		e.preventDefault();
+		delevel();
+	}
+	if (e.key == 'g') {
+		e.preventDefault();
+		generateNew();
 }
 var levels = Array(); levelcp = Array(); levelskill = Array(); level = Array();
 var cplevel = Array(10,10,10,10,10,10,10,10,10,20,20,20,20,20,20,20,20,20,20,30,30,30,30,30,30,30,30,30,30,30);
