--- a/chargen_b4_v2_4.html
+++ b/chargen_b4_v2_4.html
@@ -258,6 +258,7 @@ document.onkeydown = getKeyPress;
 function getKeyPress(e) {
 	console.log('Key Pressed: ' + e.key);
 	if (e.key == 'alt') e.preventDefault();
+	if (e.key == 'Control') e.preventDefault();
 	if (e.key == 's') e.preventDefault();
 	if (e.key == '+') {
 		e.preventDefault();
