Revomes bug where you can begin leveling without selecting a skill first

--- a/chargen_b4_v2_4.html
+++ b/chargen_b4_v2_4.html
@@ -2666,6 +2666,7 @@ function updateStatsTable()
 
 function levelup()
 {
+	if (document.getElementById("level").disabled) return;
 	if (level[level.length - 1] == levelskill.length)
 	{
 		if (level.length >= 30) {
