--- a/hypermap.html
+++ b/hypermap.html
@@ -28,10 +28,10 @@
       <div class="maplink" id="backButton" style="border-color:#FFFFFF; background-color:#000000"><a href="http://www.nexusclash.com/modules.php?name=Game">Back to game</a></div>
     </div>
     <span class="bottomBar">
-      <div class="content" id="content" onclick="" role="main">
+      <div class="content" id="content" onclick="" role="main" aria-live="assertive">
         <div class="defaultPlane" id="valhalla"><img src="valhalla.png" height="1008" width="1008" /></div>
-        <div class="planes" id="elysium"><img src="elysium.png" height="1008" width="768" /></div>
-        <div class="planes" id="stygia"><img src="stygia.png" height="1008" width="768" /></div>
+        <div class="planes" id="elysium" aria-live="assertive"title="Elysium"><img src="elysium.png" height="1008" width="768" /></div>
+        <div class="planes" id="stygia" aria-live="assertive"title="Stygia"><img src="stygia.png" height="1008" width="768" /></div>
         <div class="planes" id="sewers"><img src="sewers.png" height="1008" width="1008" /></div>
         <div class="planes" id="warrens"><img src="warrens.png" height="335" width="335" /></div>
         <div class="planes" id="terraNullius"><img src="terraNullius.png" height="359" width="335" /></div>
