Experiments with headers

--- a/ncAriaTesting.htm
+++ b/ncAriaTesting.htm
@@ -24,7 +24,15 @@
 
 
 
-<style type="text/css">.hptext { font-size: xx-small; color: #ff0099; }
+<style type="text/css">
+h3 {
+  margin: 1px;
+}
+h4 {
+  margin: 1px;
+}
+
+.hptext { font-size: xx-small; color: #ff0099; }
 .hptext2 { font-size: xx-small; color: black; }
 .mptext { font-size: xx-small; color: darkblue; }
 .petstatus-aplow { background-color: #999999; }
@@ -263,10 +271,10 @@ td.match-inventory { background-color: #88ccee; }
 <tr><td colspan="7"></td></tr></tbody></table></center></div>
 
 
-<div class="panetitle" role="Region">Messages (Current Game Time: Tue 2019-10-29 11:43:21)</div>
+<div class="panetitle" role="Region"><h3>Messages (Current Game Time: Tue 2019-10-29 11:43:21)</h3></div>
    <div id="Messages" style="overflow: auto; height: 100px; resize: vertical;"> <div class="libgave">- You step outside of House. (2019-10-29 11:43:15). <br></div><div class="MageAchievement">- <span class="MageAchievementColour"><b><a href="https://www.nexusclash.com/modules.php?name=Game&amp;op=character&amp;id=52">Reficul</a> has earned the Luddite badge!</b></span> (2019-10-29 10:01:59). </div><div class="MageAchievement">- <span class="MageAchievementColour"><b><a href="https://www.nexusclash.com/modules.php?name=Game&amp;op=character&amp;id=10918">Deathpoint</a> has earned the High Roller badge!</b></span> (2019-10-29 04:43:05). </div><div class="MageAchievement">- <span class="MageAchievementColour"><b><a href="https://www.nexusclash.com/modules.php?name=Game&amp;op=character&amp;id=11230">Nurma</a> has earned the Researcher badge!</b></span> (2019-10-29 04:21:31). </div>- You attempt to hide. You think you are hidden. (2019-10-29 01:04:03). <br><div class="MageAchievement">- <span class="MageAchievementColour"><b><a href="https://www.nexusclash.com/modules.php?name=Game&amp;op=character&amp;id=4665">-----</a> has pleased the Dark Lord Tlacolotl through relentless brutality and violence and has been made into an Infernal Behemoth!</b></span> (2019-10-28 23:54:05). </div>- (3 times) You attempt to hide. There is no place you can find to hide in. (2019-10-28 23:48:04). <br><div class="libgave">- You step inside House. (2019-10-28 23:48:02). <br></div></div>
 
-<div class="panetitle">Speech Actions</div><form name="speak" action="https://www.nexusclash.com/modules.php?name=Game&amp;op=speak" method="POST"><input type="hidden" name="SID" value="25">
+<div class="panetitle"><h4>Speech Actions</h4></div><form name="speak" action="https://www.nexusclash.com/modules.php?name=Game&amp;op=speak" method="POST"><input type="hidden" name="SID" value="25">
       <input type="submit" value="Say (0 AP)"><input type="text" name="blahblah" size="40" maxlength="1023"> to <select name="target_id" id="speech_target_id">
 <option value="0">Everyone Here</option></select></form>
     <form name="writing" action="https://www.nexusclash.com/modules.php?name=Game&amp;op=write" method="POST">
@@ -276,12 +284,12 @@ td.match-inventory { background-color: #88ccee; }
 
 
 <div class="panetitle"><form name="pane_open" action="https://www.nexusclash.com/modules.php?name=Game" method="POST"><input type="hidden" name="pane" value="description"><input type="hidden" name="state" value="Close">
-<input type="image" src="./ncAriaTesting_files/close.gif" style="float:right" alt="-" border="0" name="submit"> Description</form></div>
+<input type="image" src="./ncAriaTesting_files/close.gif" style="float:right" alt="-" border="0" name="submit"><h3> Description</h3></form></div>
 <div class="tile_description" role="contentinfo"><b><u>House (16, 31 Laurentia, a <a href="https://wiki.nexuscla.sh/wiki/index.php/House">House</a>, District: Wolverton)</u></b>
   <br><br><img height="50" align="left" src="./ncAriaTesting_files/sunrise.svg" alt="Day"><div id="libdesc"> You are standing outside of House. This is a small two-story house with vinyl siding and a false brick facade. It is surrounded by a narrow picket-fenced yard with a few small trees. A detached garage for a single car stands behind the house.    <span class="liblights">The lights are on inside the building</span>. The sky is filled with ragged grey clouds that occasionally give way to a bright sun.  The broken remains of the door hang awkwardly from its hinges.<span></span></div><br>Someone has written <span style="background-color:rgb(100,100,100,0.4)"><span style="color:#96ff96">The world Shall belong to the Kindred once more</span></span> in <span style="background-color:rgb(100,100,100,0.4)"><span style="color:#96ff96">green chalk</span></span> on a wall here.<br><br>There are 0 other people here.</div>
 
 <div class="panetitle"><form name="pane_open" action="https://www.nexusclash.com/modules.php?name=Game" method="POST"><input type="hidden" name="pane" value="doors"><input type="hidden" name="state" value="Close">
-<input type="image" src="./ncAriaTesting_files/close.gif" style="float:right" alt="-" border="0" name="submit"> Door Actions</form></div>
+<input type="image" src="./ncAriaTesting_files/close.gif" style="float:right" alt="-" border="0" name="submit"><h4> Door Actions</h4></form></div>
 <table><tbody><tr>
         <td><form name="doorenter" action="https://www.nexusclash.com/modules.php?name=Game&amp;op=door" method="POST"><input type="hidden" name="action" value="enter"><input type="submit" value="Step Inside House"></form></td>
   <td><form name="doorrepair" action="https://www.nexusclash.com/modules.php?name=Game&amp;op=door" method="POST"><input type="hidden" name="action" value="repair"><input type="submit" value="Repair Door (5 AP)"></form></td>
@@ -291,7 +299,7 @@ td.match-inventory { background-color: #88ccee; }
 
 
 <div class="panetitle"><form name="pane_open" action="https://www.nexusclash.com/modules.php?name=Game" method="POST"><input type="hidden" name="pane" value="basic"><input type="hidden" name="state" value="Close">
-<input type="image" src="./ncAriaTesting_files/close.gif" style="float:right" alt="-" border="0" name="submit"> Basic Actions</form></div>
+<input type="image" src="./ncAriaTesting_files/close.gif" style="float:right" alt="-" border="0" name="submit"><h4> Basic Actions</h4></form></div>
 <table><tbody><tr><td><form name="search" action="https://www.nexusclash.com/modules.php?name=Game&amp;op=search" method="POST"><input type="submit" accesskey="S" value="Search (1 AP)"></form></td>
 <td><form name="hide" action="https://www.nexusclash.com/modules.php?name=Game&amp;op=hide" method="POST"><input type="submit" accesskey="H" value="Hide (1 AP)"></form></td>
 </tr></tbody></table>
@@ -302,13 +310,13 @@ td.match-inventory { background-color: #88ccee; }
 
 
 <div class="panetitle"><form name="pane_open" action="https://www.nexusclash.com/modules.php?name=Game" method="POST"><input type="hidden" name="pane" value="repair"><input type="hidden" name="state" value="Close">
-<input type="image" src="./ncAriaTesting_files/close.gif" style="float:right" alt="-" border="0" name="submit"> Repair/Craft</form></div>
+<input type="image" src="./ncAriaTesting_files/close.gif" style="float:right" alt="-" border="0" name="submit"><h4> Repair/Craft</h4></form></div>
 
 <div class="panetitle"><form name="pane_open" action="https://www.nexusclash.com/modules.php?name=Game" method="POST"><input type="hidden" name="pane" value="engineering"><input type="hidden" name="state" value="Close">
-<input type="image" src="./ncAriaTesting_files/close.gif" style="float:right" alt="-" border="0" name="submit"> Engineering Actions</form></div>
+<input type="image" src="./ncAriaTesting_files/close.gif" style="float:right" alt="-" border="0" name="submit"><h4> Engineering Actions</h4></form></div>
 <form name="remove_power" action="https://www.nexusclash.com/modules.php?name=Game&amp;op=power" method="POST"><input type="hidden" name="action" value="Remove"><input type="submit" value="Remove Power (3 AP)"></form>
 <div class="panetitle"><form name="pane_open" action="https://www.nexusclash.com/modules.php?name=Game" method="POST"><input type="hidden" name="pane" value="targetshoot"><input type="hidden" name="state" value="Close">
-<input type="image" src="./ncAriaTesting_files/close.gif" style="float:right" alt="-" border="0" name="submit"> Items and Targets</form></div>
+<input type="image" src="./ncAriaTesting_files/close.gif" style="float:right" alt="-" border="0" name="submit"><h4> Items and Targets</h4></form></div>
 <form name="targetsetup" action="https://www.nexusclash.com/modules.php?name=Game&amp;op=targetsetup" method="POST"><input type="submit" value="Set Up"><select name="item"><option value="11334051">Potion of Lesser Invulnerability</option></select> as a target.</form>
 
 
